--- a/src/style.scss
+++ b/src/style.scss
@@ -86,6 +86,12 @@ $inline-paddings: (
     }
 }
 
+@media (max-width: 1024px) {
+    .px-12 {
+        padding-inline: 24px;
+    }
+}
+
 $block-paddings: (
     py-2: 8px,
     py-4: 16px,
@@ -217,11 +223,11 @@ header {
                 transition: width 0.3s ease;
             }
         }
+    }
 
-        @media (max-width: 425px) {
-            path {
-                display: none;
-            }
+    @media (max-width: 425px) {
+        svg {
+            display: none;
         }
     }
 
@@ -273,7 +279,8 @@ header {
 .background {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(to bottom, #ececec, #8c8c8c);
+    background: linear-gradient(to bottom, #ffffff, #c5c5c5);
+    margin-top: 120px;
 }
 
 .description {
@@ -284,6 +291,7 @@ header {
 
     @media (max-width: 768px) {
         width: 100%;
+        height: 500px;
     }
 
     @media (min-width: 1280px) {
@@ -297,6 +305,75 @@ header {
 
 .heading-1 {
     line-height: 1.2;
-    font-size: calc(2rem + 0.5vw);
+    font-size: 4rem;
     font-weight: 600;
+
+    @media (max-width: 768px) {
+        font-size: 2.5rem;
+    }
+
+    @media (width: 768px) {
+        font-size: 4rem;
+    }
+}
+
+.community-background {
+    height: 400px;
+    width: 100%;
+    color: white;
+    background-color: black;
+    border-radius: 48px;
+    margin-top: 144px;
+
+    @media (max-width: 1024px) {
+        height: 450px;
+        margin-top: 32px;
+    }
+
+    .community-heading {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        text-align: center;
+
+        .line {
+            flex: auto;
+            background-color: #454545;
+            height: 1px;
+        }
+    }
+}
+
+.community-container {
+    padding: 128px 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+    @media (max-width: 1024px) {
+        padding: 64px 0;
+    }
+
+    > div {
+        width: 100%;
+    }
+}
+
+.img-container {
+    margin-top: 32px;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    gap: 32px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    @media (max-width: 1024px) {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
 }
