update with transition animations, add cards

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wdth,wght@0,75..125,200..900;1,75..125,200..900&display=swap');
 
 $default-font-size: 16px;
 $default-font-weight: 500;
 $default-line-height: 1.6;
+$default-font-stretch: expanded;
 
 $sizes: (
     xs: .75rem,
@@ -150,10 +151,11 @@ $widths: (
 }
 
 :root {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Mona Sans", sans-serif;
     font-weight: $default-font-weight;
     line-height: $default-line-height;
     font-size: $default-font-size;
+    font-stretch: $default-font-stretch;
 }
 
 *,
@@ -178,14 +180,22 @@ body {
     margin: 0 auto;
 }
 
+.mt-80 {
+    margin-top: 80px;
+}
+
+.mt-40 {
+    margin-top: 40px;
+}
+
 .background-wrapper {
     width: 100%;
     height: 100%;
     background-color: #fff;
     margin-top: 8px;
     border-top: 1px solid #fff;
-    border-top-left-radius: 32px;
-    border-top-right-radius: 32px;
+    border-top-left-radius: 48px;
+    border-top-right-radius: 48px;
 }
 
 header {
@@ -288,6 +298,9 @@ header {
     flex-direction: column;
     justify-content: center;
     height: 600px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 
     @media (max-width: 768px) {
         width: 100%;
@@ -295,12 +308,17 @@ header {
     }
 
     @media (min-width: 1280px) {
-        width: 60%;
+        width: 65%;
     }
 
     p {
         color: #454545;
     }
+}
+
+.visible-description {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .heading-1 {
@@ -329,20 +347,28 @@ header {
         height: 450px;
         margin-top: 32px;
     }
+}
 
-    .community-heading {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        gap: 16px;
-        text-align: center;
+.community-heading {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    text-align: center;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 
-        .line {
-            flex: auto;
-            background-color: #454545;
-            height: 1px;
-        }
+    .line {
+        flex: auto;
+        background-color: #454545;
+        height: 1px;
     }
+}
+
+.visible-heading {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .community-container {
@@ -376,4 +402,140 @@ header {
         max-width: 100%;
         height: auto;
     }
+
+    div:nth-of-type(1) img {
+        transition-delay: 0.1s;
+    }
+
+    div:nth-of-type(2) img {
+        transition-delay: 0.3s;
+    }
+
+    div:nth-of-type(3) img {
+        transition-delay: 0.5s;
+    }
+
+    div:nth-of-type(4) img {
+        transition-delay: 0.7s;
+    }
+
+    div:nth-of-type(5) img {
+        transition-delay: 0.9s;
+    }
+
+    div:nth-of-type(6) img {
+        transition-delay: 1.1s;
+    }
+
+    div:nth-of-type(7) img {
+        transition-delay: 1.3s;
+    }
+
+    div:nth-of-type(8) img {
+        transition-delay: 1.5s;
+    }
+}
+
+.img-item {
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+.visible-img {
+    opacity: 1;
+}
+
+.heading-2 {
+    line-height: 1.2;
+    font-size: 3rem;
+    font-weight: 600;
+
+    @media (max-width: 768px) {
+        font-size: 2rem;
+    }
+
+    @media (width: 768px) {
+        font-size: 2.5rem;
+    }
+}
+
+.technologies {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 400px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+
+    @media (max-width: 768px) {
+        width: 100%;
+        height: 300px;
+    }
+
+    @media (min-width: 1280px) {
+        width: 65%;
+    }
+
+    p {
+        color: #454545;
+    }
+}
+
+.visible-technologies {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.card-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+
+    @media (max-width: 1024px) {
+        flex-direction: column;
+    }
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #d3d3d3;
+    padding: 32px;
+    border-radius: 32px;
+    z-index: 1;
+    transition: all 0.4s ease;
+    min-height: 410px;
+    justify-content: center;
+    gap: 16px;
+
+    img {
+        height: 64px;
+        width: 64px;
+    }
+}
+
+.animated-bg {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    z-index: -1;
+    scale: 0.95;
+    border-radius: 32px;
+    transition: all 0.4s ease;
+}
+
+.card:hover .animated-bg {
+    opacity: 1;
+    scale: 1;
+    background-color: #c6c6c6;
+}
+
+.date-heading {
+    display: flex;
+    align-items: center;
+    gap: 8px;
 }
