--- a/src/style.scss
+++ b/src/style.scss
@@ -341,11 +341,11 @@ header {
     color: white;
     background-color: black;
     border-radius: 48px;
-    margin-top: 144px;
+    margin-top: 256px;
 
     @media (max-width: 1024px) {
         height: 450px;
-        margin-top: 32px;
+        margin-top: 0;
     }
 }
 
@@ -493,10 +493,18 @@ header {
     align-items: center;
     justify-content: center;
     gap: 16px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 
     @media (max-width: 1024px) {
         flex-direction: column;
     }
+}
+
+.visible-card-container {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .card {
