--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@ $default-font-size: 16px;
 $default-font-weight: 500;
 $default-line-height: 1.6;
 $default-font-stretch: expanded;
+$default-font-color: #454545;
 
 $sizes: (
     xs: .75rem,
@@ -188,6 +189,18 @@ body {
     margin-top: 40px;
 }
 
+.mt-40 {
+    margin-top: 40px;
+}
+
+.mt-256 {
+    margin-top: 256px;
+}
+
+.text-default-color {
+    color: $default-font-color
+}
+
 .background-wrapper {
     width: 100%;
     height: 100%;
@@ -264,7 +277,7 @@ header {
         transition: background-color 0.2s ease;
 
         &:hover {
-            background-color: #454545;
+            background-color: $default-font-color;
         }
     }
 
@@ -289,7 +302,7 @@ header {
 .background {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(to bottom, #ffffff, #c5c5c5);
+    background: linear-gradient(to bottom, #ffffff, #d3d3d3);
     margin-top: 120px;
 }
 
@@ -302,6 +315,10 @@ header {
     transform: translateY(10px);
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 
+    p {
+        color: $default-font-color;
+    }
+
     @media (max-width: 768px) {
         width: 100%;
         height: 500px;
@@ -309,10 +326,6 @@ header {
 
     @media (min-width: 1280px) {
         width: 65%;
-    }
-
-    p {
-        color: #454545;
     }
 }
 
@@ -361,7 +374,7 @@ header {
 
     .line {
         flex: auto;
-        background-color: #454545;
+        background-color: $default-font-color;
         height: 1px;
     }
 }
@@ -447,8 +460,8 @@ header {
 
 .heading-2 {
     line-height: 1.2;
-    font-size: 3rem;
-    font-weight: 600;
+    font-size: 2.5rem;
+    font-weight: 500;
 
     @media (max-width: 768px) {
         font-size: 2rem;
@@ -468,17 +481,18 @@ header {
     transform: translateY(10px);
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 
-    @media (max-width: 768px) {
-        width: 100%;
-        height: 300px;
-    }
-
-    @media (min-width: 1280px) {
-        width: 65%;
+    h1 {
+        @media (min-width: 1280px) {
+            width: 45%;
+        }
     }
 
     p {
-        color: #454545;
+        color: $default-font-color;
+
+        @media (min-width: 1280px) {
+            width: 62%;
+        }
     }
 }
 
@@ -493,37 +507,46 @@ header {
     align-items: center;
     justify-content: center;
     gap: 16px;
-    opacity: 0;
-    transform: translateY(10px);
-    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 
     @media (max-width: 1024px) {
         flex-direction: column;
     }
-}
 
-.visible-card-container {
-    opacity: 1;
-    transform: translateY(0);
+    .card:nth-of-type(1) {
+        transition-delay: 0.1s;
+    }
+
+    .card:nth-of-type(2) {
+        transition-delay: 0.3s;
+    }
+
+    .card:nth-of-type(3) {
+        transition-delay: 0.5s;
+    }
 }
 
 .card {
     position: relative;
     display: flex;
     flex-direction: column;
-    border: 1px solid #d3d3d3;
-    padding: 32px;
-    border-radius: 32px;
-    z-index: 1;
-    transition: all 0.4s ease;
-    min-height: 410px;
     justify-content: center;
     gap: 16px;
+    border: 1px solid #d3d3d3;
+    border-radius: 32px;
+    padding: 32px;
+    z-index: 1;
+    min-height: 410px;
+    opacity: 0;
+    transition: all 0.4s ease;
 
     img {
         height: 64px;
         width: 64px;
     }
+}
+
+.visible-card {
+    opacity: 1;
 }
 
 .animated-bg {
@@ -546,4 +569,237 @@ header {
     display: flex;
     align-items: center;
     gap: 8px;
+}
+
+.max-w-1024 {
+    max-width: 1024px;
+}
+
+.community-comment {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+
+    p:before {
+        position: absolute;
+        content: '“';
+        top: 0;
+        left: -15px;
+    }
+
+    p:after {
+        content: '”';
+    }
+}
+
+.visible-comment {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.services-header {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+
+    p {
+        color: $default-font-color;
+    }
+
+    @media (max-width: 768px) {
+        width: 100%;
+    }
+
+    @media (min-width: 1280px) {
+        width: 65%;
+    }
+}
+
+.visible-services-header {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.services {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    width: 100%;
+    overflow-x: hidden;
+
+    @media (max-width: 1024px) {
+        flex-direction: column;
+    }
+}
+
+.services-image {
+    width: 50%;
+    filter: grayscale(100%);
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+.visible-services-image {
+    opacity: 1;
+}
+
+.services-features {
+    @media (max-width: 768px) {
+        width: 100%;
+    }
+
+    @media (min-width: 768px) {
+        width: 60%;
+    }
+
+    @media (min-width: 1024px) {
+        width: 40%;
+    }
+
+    div:nth-of-type(1) {
+        transition-delay: 0.1s;
+    }
+
+    div:nth-of-type(2) {
+        transition-delay: 0.3s;
+    }
+
+    div:nth-of-type(3) {
+        transition-delay: 0.5s;
+    }
+
+    div:nth-of-type(4) {
+        transition-delay: 0.7s;
+    }
+}
+
+.feature {
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+.visible-feature {
+    opacity: 1;
+}
+
+.line-container {
+    display: flex;
+    gap: 16px;
+    height: 1px;
+    width: 100%;
+
+    span:nth-of-type(1) {
+        background-color: black;
+        width: 32px;
+    }
+
+    span:nth-of-type(2) {
+        background-color: #bdbdc5;
+        width: 100%;
+    }
+}
+
+.contact-us-container {
+    padding-inline: 48px;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
+
+    @media (max-width: 768px) {
+        padding-inline: 0;
+    }
+}
+
+.visible-contact-us {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.contact-us-background {
+    background-color: black;
+    height: 560px;
+    border-radius: 48px;
+
+    @media (max-width: 768px) {
+        height: 600px;
+    }
+}
+
+.contact-us {
+    display: flex;
+    gap: 32px;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    padding: 96px 88px;
+    color: white;
+
+    @media (max-width: 768px) {
+        padding: 32px 16px;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 36px;
+        padding-inline: 16px;
+
+        span {
+            width: 60%;
+            height: 1px;
+            background-color: #222222;
+        }
+
+        button {
+            width: 84px;
+            background-color: white;
+            border-radius: 32px;
+            border: none;
+        }
+    }
+}
+
+.contacts {
+    display: flex;
+    flex-direction: column;
+    padding-inline: 16px;
+    gap: 36px;
+
+    h2 {
+        font-size: 18px;
+    }
+
+    .offices {
+        display: flex;
+        flex-direction: row;
+        gap: 32px;
+
+        @media (max-width: 768px) {
+            flex-direction: column;
+        }
+
+        p {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+
+            span:nth-of-type(2) {
+                color: #d4d4d4;
+            }
+
+            span:nth-of-type(3) {
+                color: #d4d4d4;
+            }
+        }
+    }
 }
