add links, subscription form, footer

--- a/src/style.scss
+++ b/src/style.scss
@@ -185,16 +185,8 @@ body {
     margin-top: 80px;
 }
 
-.mt-40 {
-    margin-top: 40px;
-}
-
-.mt-40 {
-    margin-top: 40px;
-}
-
-.mt-256 {
-    margin-top: 256px;
+.mt-200 {
+    margin-top: 200px;
 }
 
 .text-default-color {
@@ -229,7 +221,7 @@ header {
     align-items: center;
 }
 
-.header-logo {
+.logo {
     height: 32px;
     color: black;
 
@@ -302,7 +294,7 @@ header {
 .background {
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(to bottom, #ffffff, #d3d3d3);
+    background: #fff;
     margin-top: 120px;
 }
 
@@ -340,7 +332,7 @@ header {
     font-weight: 600;
 
     @media (max-width: 768px) {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     @media (width: 768px) {
@@ -354,7 +346,7 @@ header {
     color: white;
     background-color: black;
     border-radius: 48px;
-    margin-top: 256px;
+    margin-top: 200px;
 
     @media (max-width: 1024px) {
         height: 450px;
@@ -476,7 +468,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 400px;
+    height: 350px;
     opacity: 0;
     transform: translateY(10px);
     transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
@@ -506,7 +498,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: 32px;
 
     @media (max-width: 1024px) {
         flex-direction: column;
@@ -800,6 +792,179 @@ header {
             span:nth-of-type(3) {
                 color: #d4d4d4;
             }
+        }
+    }
+}
+
+.links-container {
+    display: flex;
+    flex-direction: row;
+    padding-inline: 48px;
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+
+    @media (max-width: 1024px) {
+        flex-direction: column;
+        gap: 64px;
+    }
+}
+
+.visible-links-container {
+    opacity: 1;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    gap: 96px;
+
+    ul {
+        list-style: none;
+        flex: 1;
+
+        li {
+            padding: 8px 0;
+
+            a {
+                color: $default-font-color;
+                text-decoration: none;
+                font-weight: 400;
+                font-size: .875rem;
+            }
+        }
+
+        li:first-child {
+            padding-top: 0;
+
+            a {
+                color: black;
+                font-weight: 600;
+            }
+        }
+    }
+
+    @media (max-width: 1024px) {
+        flex-wrap: wrap;
+        gap: 64px;
+    }
+}
+
+.subscription {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    flex: 1;
+    width: 100%;
+
+    .form {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        font-weight: 400;
+        font-size: .875rem;
+
+        h3 {
+            font-weight: 600;
+        }
+
+        span {
+            color: $default-font-color;
+        }
+
+        div {
+            input {
+                padding: 16px 80px 16px 16px;
+                border-radius: 16px;
+                border: 1px solid $default-font-color;
+                background-color: #fff;
+                font-size: 1rem;
+                width: 100%;
+
+                &:focus {
+                    outline: 1px solid $default-font-color;
+                }
+            }
+
+            button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: black;
+                border: none;
+                border-radius: 16px;
+                inset-block: .25rem;
+                right: 4px;
+                aspect-ratio: 1;
+                transition: background-color 0.2s ease-in-out;
+
+                svg {
+                    color: white;
+                    width: 16px;
+                }
+
+                &:hover {
+                    background-color: #333333;
+                }
+            }
+        }
+
+        @media (max-width: 1024px) {
+            width: 100%;
+        }
+    }
+
+    @media (max-width: 1024px) {
+        justify-content: start;
+    }
+}
+
+.footer-container {
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 32px;
+    border-top: 1px solid #acacac;
+
+    span {
+        font-weight: 400;
+        font-size: .875rem;
+        color: $default-font-color;
+    }
+
+    @media (max-width: 1024px) {
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        gap: 16px;
+    }
+}
+
+.footer-logo {
+    height: 32px;
+    color: black;
+
+    svg {
+        height: 100%;
+        transition: all 0.2s ease;
+
+        svg {
+            stroke: black;
+
+            .header-rect {
+                width: 0;
+                fill: black;
+                transition: width 0.3s ease;
+            }
+        }
+    }
+
+    &:hover {
+        svg svg .header-rect {
+            width: 32px;
         }
     }
 }
